--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="card">
         <h3 class="card-header text-uppercase">Search By User</h3>
         <form id="user-form" class="card-body">
-          <label class="for-label" for="suername">Username</label>
+          <label class="for-label" for="username">Username</label>
           <input name="username" id="username" type="text" autofocus="true" class="form-input" />
           <button type="submit" class="btn">Get User</button>
         </form>
