--- a/single-repo.html
+++ b/single-repo.html
@@ -22,9 +22,13 @@
   </header>
   
   <main>
-    <div id="issues-container" class="list-group"></div>
+    <div id="issues-container" class="list-group">
+
+    </div>
     
-    <div id="limit-warning"></div>
+    <div id="limit-warning">
+      
+    </div>
   </main>
 
   <script src="assets/js/single.js"></script>
